K8s-1976: fix permission error, when retrieving quota limits, you can only retrieve the limit for the current tenant without specifying it as a query paramter
