# api/pkg/handler/routes_v1_sys11.go
@@ -1,6 +1,10 @@
 package handler
 
 import (
+	"github.com/go-kit/kit/endpoint"
+	httptransport "github.com/go-kit/kit/transport/http"
+	"github.com/kubermatic/kubermatic/api/pkg/handler/middleware"
+	"github.com/kubermatic/kubermatic/api/pkg/handler/v1/provider"
 	"net/http"
 
 	"github.com/gorilla/mux"
@@ -10,4 +14,56 @@ func (r Routing) RegisterV1SysEleven(mux *mux.Router) {
 	mux.Methods(http.MethodGet).
 		Path("/projects/{project_id}/dc/{dc}/cluster/{cluster_id}/prometheus/{query_path}").
 		Handler(r.prometheusProxyHandler())
+
+	mux.Methods(http.MethodGet).
+		Path("/providers/openstack/images").
+		Handler(r.listOpenstackImages())
+
+	mux.Methods(http.MethodGet).
+		Path("/providers/openstack/quotalimits").
+		Handler(r.listOpenstackQuotaLimits())
+}
+
+// swagger:route GET /api/v1/providers/openstack/images openstack listOpenstackImages
+//
+// Lists images from openstack
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       default: errorResponse
+//       200: []Image
+func (r Routing) listOpenstackImages() http.Handler {
+	return httptransport.NewServer(
+		endpoint.Chain(
+			r.oidcAuthenticator.Verifier(),
+			middleware.UserSaver(r.userProvider),
+		)(provider.OpenstackImageEndpoint(r.cloudProviders)),
+		provider.DecodeOpenstackReq,
+		EncodeJSON,
+		r.defaultServerOptions()...,
+	)
+}
+
+// swagger:route GET /api/v1/providers/openstack/quotalimits openstack listOpenstackQuotaLimits
+//
+// Lists quotalimits for tenant from openstack
+//
+//     Produces:
+//     - application/json
+//
+//     Responses:
+//       default: errorResponse
+//       200: []Limits
+func (r Routing) listOpenstackQuotaLimits() http.Handler {
+	return httptransport.NewServer(
+		endpoint.Chain(
+			r.oidcAuthenticator.Verifier(),
+			middleware.UserSaver(r.userProvider),
+		)(provider.OpenstackQuotaLimitEndpoint(r.cloudProviders)),
+		provider.DecodeOpenstackReq,
+		EncodeJSON,
+		r.defaultServerOptions()...,
+	)
 }
